	  1. formulas specified with ~~ (double ~) are translated to functions
	  2. character strings beginning with \1 are translated to functions
	  3. if the above rules result in no translation/interpolation
	     then all formulas are translated if there are any formulas
 	     or, if not, then all character strings are interpolated
          In most cases rule #3 is used.

Changes in 0.3-1

	o fixed initialization bug in strapply

	o added proto examples to ?gsubfn and ?strapply

Changes in 0.3-0

	o gsubfn and strapply now can take proto arguments in addition
	  to character strings, functions and formulas

	o vignette added

	o home page abbreviated since most info already in vignette


Changes in 0.2-3

	o increased string lengths accepted by gsubfn by eliminating
	  use of the R parse() command. [Thanks to Stefan Th. Gries
 	  for reporting problem.]

	o fixed bug in one of the examples in example(gsubfn)

	o strapply fixes

Changes in 0.2-2

	o added combine= argument to strapply

	o fixed bug associated with using double quotes in gsub (which
	  also could affect strapply and cati).  [Thanks to Stefan Th.
	  Gries for reporting problem.]

Changes in 0.2-1 

	o added "note difference" example in strapply

	o letters, LETTERS and pi excluded from args so 
	  x ~ sin(x*pi/180) can be shortened to ~ sin(x*pi/180)
	  and 
 	  x ~ LETTERS[x] can be reduced to ~ LETTERS[x]
  	  (previously it would have added pi and LETTERS to arg
	  lists in these two examples)

	o improved as.function.formula.Rd

	o fixes to eliminate R CMD CHECK warnings under R 2.5.0
 
	o bug fix in $.fn.  If args and match.call order was different
	  it could fail previously.

	o new demos: gsubfn-gries.R, gsubfn-chron.R, gsubfn-si.R

	o THANKS file

Changes in 0.2-0 

	o match.funfn

	o as.function.formula improvements

	o $.fn

	o added numerous examples of $.fn to home page

Changes in 0.1-5

	o reference to cat0 missing from gsubfn-package.Rd
