@@ -1,13 +1,20 @@
 
 WISHLIST
 
-o d <- "X" 
-  gsubfn(x = "\\$d$d$")
-Error in parse(file, n, text, prompt) : syntax error in "c("\",replacement("$d",
-
 o assign("mywarn", NULL, .GlobalEnv)
   fn$tryCatch( warning("a warning"), 
     warning = w ~ mywarn <<- conditionMessage(w))
   print(mywarn)
 does not work.
+
+o xml features
+
+o better simplification
+
+o handle invisible output
+
+o extend fn$ to proto objects
+
+o can current rules of determining which formulas to convert to functions
+  and which strings to perform interpolation on be improved?
 
