@@ -1,6 +1,7 @@
 \name{fn}
 \alias{fn}
 \alias{$.fn}
+\alias{eval.with.vis}
 \title{ Transform formula arguments to functions. }
 \description{
   When used in the form \code{fn\$somefunction(...arguments...)}
